# linux-pam-backdoor

./: README.md  backdoor.patch  backdoor.patch.broken  backdoor.sh  base32.c  dns.c  file  libpam_versions.txt  make_patch.sh  pam_unix_auth.c  pam_unix_auth.c.freak  test.c  test.patch
bins/: 1.1.1-centos  1.1.8-centos  1.1.8-centos.xz.b64  1.1.8-debian  1.1.8-ubuntu  1.1.8-ubuntu.xz.b64  1.3.0-centos  1.3.0-centos.xz.b64  1.3.0-ubuntu  1.3.0-ubuntu.xz.b64  compiled_pw.txt
ctests/: fml  fml.c
loader/: loader.sh
loader/rust/src/: main.rs
pam_version/: Cargo.toml  pam_version
pam_version/src/: main.rs
