[package]
name = "pam_version"
version = "0.1.0"
authors = ["jaskier <target111@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
